--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -205,7 +205,7 @@ footer.footer {
 .arrow_box_transparent {
 	position: relative;
 	background: #;
-	border: 1px solid #c2e1f5;
+	border: 4px solid #c2e1f5;
 }
 .arrow_box:after, .arrow_box:before {
 	top: 100%;
@@ -219,14 +219,14 @@ footer.footer {
 }
 
 .arrow_box:after {
-	border-color: rgba(136, 183, 213, 0);
-	border-top-color: #88b7d5;
+	border-color: rgba(0, 0, 0, 0);
+	border-top-color: #;
 	border-width: 30px;
 	margin-left: -30px;
 }
 .arrow_box:before {
 	border-color: rgba(194, 225, 245, 0);
 	border-top-color: #c2e1f5;
-	border-width: 31px;
-	margin-left: -31px;
+	border-width: 36px;
+	margin-left: -36px;
 }
