--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -204,7 +204,7 @@ footer.footer {
 
 .arrow_box_transparent {
 	position: relative;
-	background: #;
+	background: #ffffff;
 	border: 4px solid #c2e1f5;
 }
 .arrow_box:after, .arrow_box:before {
