--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -202,7 +202,7 @@ footer.footer {
 	margin-left: -31px;
 }
 
-.arrow_box_transparent {
+.arrow_box2 {
 	position: relative;
 	background: #ffffff;
 	border: 4px solid #c2e1f5;
