--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -204,10 +204,10 @@ footer.footer {
 
 .arrow_box2 {
 	position: relative;
-	background: #ffffff;
-	border: 4px solid #c2e1f5;
+	background: #;
+	border: 1px solid #c2e1f5;
 }
-.arrow_box:after, .arrow_box:before {
+.arrow_box2:after, .arrow_box2:before {
 	top: 100%;
 	left: 50%;
 	border: solid transparent;
@@ -218,15 +218,15 @@ footer.footer {
 	pointer-events: none;
 }
 
-.arrow_box:after {
-	border-color: rgba(0, 0, 0, 0);
-	border-top-color: #;
+.arrow_box2:after {
+	border-color: rgba(136, 183, 213, 0);
+	border-top-color: #88b7d5;
 	border-width: 30px;
 	margin-left: -30px;
 }
-.arrow_box:before {
+.arrow_box2:before {
 	border-color: rgba(194, 225, 245, 0);
 	border-top-color: #c2e1f5;
-	border-width: 36px;
-	margin-left: -36px;
+	border-width: 31px;
+	margin-left: -31px;
 }
